--- a/styles.css
+++ b/styles.css
@@ -448,7 +448,7 @@ body {
   }
 }
 
-@media (max-width: 390px) {
+@media (max-width: 402px) {
   .project-info h2 {
     font-size: 1.05rem;
   }
@@ -457,8 +457,20 @@ body {
   }
 }
 
-@media (max-width: 370px){
-  .container {
-    max-width: 100%;
+@media (max-width:371px){
+  .skills h2{
+    font-size: 1.1rem;
+  }
+  .projects h2{
+    font-size: 1.1rem;
+  }
+  #titulo-contacto {
+    font-size: 1.1rem;
+  }
+}
+
+@media (max-width:358px){
+  .project-info p {
+    font-size: 0.75rem;
   }
 }
