--- a/styles.css
+++ b/styles.css
@@ -162,10 +162,19 @@ body {
   margin-bottom: 48px;
 }
 
+.projects-grid-3{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 48px;
+  margin: 0px;
+  background-color: transparent;
+  margin-bottom: 48px;
+}
+
 .project-card {
   display: flex;
   flex-direction: column;
-  background: rgb(31, 41, 55);
+  background: transparent;
   border-radius: 16px;
   box-shadow: 0 6px 18px rgba(2,6,23,0.6);
   text-decoration: none;
@@ -188,7 +197,7 @@ body {
 }
 
 .project-info {
-  background-color: rgb(31, 41, 55);
+  background-color: transparent;
   padding: 24px;
   border-top: solid 2px white;
 }
@@ -335,6 +344,9 @@ body {
     grid-template-columns: 1fr;
   }
   .projects-grid-2{
+    grid-template-columns: 1fr;
+  }
+  .projects-grid-3{
     grid-template-columns: 1fr;
   }
   .project-info p {
