--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,15 @@ body {
   margin-bottom: 48px;
 }
 
+.projects-grid-4{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 48px;
+  margin: 0px;
+  background-color: transparent;
+  margin-bottom: 48px;
+}
+
 .project-card {
   display: flex;
   flex-direction: column;
@@ -332,6 +341,9 @@ body {
     grid-template-columns: 1fr;
   }
   .projects-grid-3{
+    grid-template-columns: 1fr;
+  }
+  .projects-grid-4{
     grid-template-columns: 1fr;
   }
   .project-info p {
