--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,13 @@ body {
   object-fit: cover;
 }
 
+.project-card .loading-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 .project-info {
   background-color: transparent;
   padding: 24px;
