--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ body {
 
 .project-card img {
   width: 100%;
-  height: 168px;
+  height: 160px;
   object-fit: cover;
 }
 
@@ -414,6 +414,9 @@ body {
   .card-text {
     font-size: 1rem;
   }
+  .project-card img {
+    height: 140px;
+}
 }
 
 @media (max-width: 517px) {
